--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <base href="/">
   <meta charset="utf-8">
-  <title>DhrupalHack</title>
+  <title>DrupalHack</title>
   <link href="favicon.png" rel="icon" type="image/png">
   <link href="vendor/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=Roboto|Montserrat:400,700|Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
@@ -31,7 +31,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/">DHRUPAL HACK</a>
+            <a class="navbar-brand page-scroll" href="/">DRUPAL HACK</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
