Added stamp to navbar

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html ng-app="GoaHack">
+<html ng-app="MangloreHack">
 <head>
   <base href="/">
   <meta charset="utf-8">
-  <title>MangloreHack</title>
+  <title>MangaloreHack</title>
   <link href="favicon.png" rel="icon" type="image/png">
   <link href="vendor/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=Roboto|Montserrat:400,700|Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
@@ -31,7 +31,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/">MANGLORE HACK</a>
+            <a class="navbar-brand page-scroll" href="/">MANGALORE HACK
+            <div class="stamp">CAMPUS EDITION</div>
+            </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
